--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 alabaster==0.7.12
 alembic==1.7.4
-anaconda-client==1.7.2
-anaconda-navigator==2.1.1
-anaconda-project==0.9.1
+anaconda-client
+anaconda-navigator
+anaconda-project
 aniso8601==8.0.0
 anyio==2.2.0
 appdirs==1.4.4
