--- a/requirements.txt
+++ b/requirements.txt
@@ -1,237 +1,230 @@
 alabaster==0.7.12
-alembic==1.7.7
-anaconda-client
-anaconda-navigator==2.1.1
-anaconda-project==0.9.1
-aniso8601==9.0.1
-anyio==3.6.1
+alembic==1.7.4
+aniso8601==8.0.0
+anyio==2.2.0
 appdirs==1.4.4
 argh==0.26.2
-argon2-cffi==21.3.0
-asn1crypto==1.5.1
-astroid==2.11.5
-astropy==5.1
+argon2-cffi==20.1.0
+asn1crypto==1.4.0
+astroid==2.5
+astropy==4.2.1
 async-generator==1.10
 atomicwrites==1.4.0
-attrs==21.4.0
-autopep8==1.6.0
-Babel==2.10.1
+attrs==20.3.0
+autopep8==1.5.6
+Babel==2.9.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 backports.shutil-get-terminal-size==1.0.0
 backports.tempfile==1.0
 backports.weakref==1.0.post1
-bcrypt==3.2.2
-beautifulsoup4==4.11.1
-bitarray==2.5.1
+bcrypt==3.2.0
+beautifulsoup4==4.9.3
+bitarray==1.9.2
 bkcharts==0.2
-black==21.12b0
-bleach==5.0.0
+black==19.10b0
+bleach==3.3.0
 bokeh==2.3.2
 boto==2.49.0
-Bottleneck==1.3.4
+Bottleneck==1.3.2
 brotlipy==0.7.0
-certifi==2022.5.18.1
-cffi==1.15.0
+certifi==2020.12.5
+cffi==1.14.5
 chardet==4.0.0
-click==8.1.3
-cloudpickle==2.1.0
+click==7.1.2
+cloudpickle==1.6.0
 clyent==1.2.2
 colorama==0.4.4
-comtypes==1.1.11
+comtypes==1.1.9
 conda==4.11.0
 conda-build==3.21.4
-conda-content-trust==0.1.2
-conda-package-handling==1.7.3
-conda-repo-cli==1.0.4
-conda-token==0.3.0
-conda-verify==3.4.2
+conda-content-trust==0+unknown
 contextlib2==0.6.0.post1
-cryptography==37.0.2
-cycler==0.11.0
-Cython==0.29.30
+cryptography==3.4.7
+cycler==0.10.0
+Cython==0.29.23
 cytoolz==0.11.0
-dask==2022.5.2
-decorator==5.1.1
+dask==2021.4.0
+decorator==5.0.6
 defusedxml==0.7.1
 diff-match-patch==20200713
 distlib==0.3.4
-distributed==2022.5.2
-docutils==0.18.1
-entrypoints==0.4
-et-xmlfile==1.1.0
+distributed==2021.4.0
+docutils==0.17
+entrypoints==0.3
+et-xmlfile==1.0.1
 fastcache==1.1.0
-filelock==3.7.0
-flake8==4.0.1
-Flask==2.1.2
-Flask-Login==0.6.1
+filelock==3.5.1
+flake8==3.9.0
+Flask==1.1.2
+Flask-Login==0.5.0
 Flask-Migrate==3.1.0
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==2.5.1
-fsspec==2022.5.0
+Flask-RESTful==0.3.8
+Flask-SQLAlchemy==2.4.3
+fsspec==0.9.0
 future==0.18.2
-gevent==21.12.0
+gevent==21.1.2
 glob2==0.7
-greenlet==1.1.2
-h5py==3.7.0
+greenlet==1.0.0
+h5py==2.10.0
 HeapDict==1.0.1
 html5lib==1.1
-idna==3.3
-imagecodecs==2022.2.22
-imageio==2.19.2
-imagesize==1.3.0
-importlib-metadata==4.11.4
-importlib-resources==5.7.1
+idna==2.10
+imagecodecs==2021.3.31
+imageio==2.9.0
+imagesize==1.2.0
+importlib-metadata==3.10.0
+importlib-resources==5.2.3
 iniconfig==1.1.1
 intervaltree==3.1.0
-ipykernel==6.13.0
-ipython==8.3.0
+ipykernel==5.3.4
+ipython==7.22.0
 ipython-genutils==0.2.0
-ipywidgets==7.7.0
-isort==5.10.1
-itsdangerous==2.1.2
+ipywidgets==7.6.3
+isort==5.8.0
+itsdangerous==1.1.0
 jdcal==1.4.1
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.1.0
-json5==0.9.8
-jsonschema==4.5.1
+jedi==0.17.2
+Jinja2==2.11.2
+joblib==1.0.1
+json5==0.9.5
+jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==7.3.1
-jupyter-console==6.4.3
-jupyter-core==4.10.0
-jupyter-packaging==0.12.0
-jupyter-server==1.17.0
-jupyterlab==3.4.2
-jupyterlab-pygments==0.2.2
-jupyterlab-server==2.14.0
-jupyterlab-widgets==1.1.0
-keyring==23.5.1
-kiwisolver==1.4.2
-lazy-object-proxy==1.7.1
-libarchive-c==4.0
-llvmlite==0.38.1
-locket==1.0.0
-lxml==4.8.0
-Mako==1.2.0
-MarkupSafe==2.1.1
-matplotlib==3.5.2
-mccabe==0.7.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyter-packaging==0.7.12
+jupyter-server==1.4.1
+jupyterlab==3.0.14
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.4.0
+jupyterlab-widgets==1.0.0
+keyring==22.3.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+libarchive-c==2.9
+llvmlite==0.36.0
+locket==0.2.1
+lxml==4.6.3
+Mako==1.1.5
+MarkupSafe==1.1.1
+matplotlib==3.3.4
+mccabe==0.6.1
 menuinst==1.4.16
-mistune==2.0.2
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
+mistune==0.8.4
+mkl-fft==1.3.0
+mkl-random==1.2.1
+mkl-service==2.3.0
 mock==4.0.3
-more-itertools==8.13.0
+more-itertools==8.7.0
 mpmath==1.2.1
-msgpack==1.0.3
+msgpack==1.0.2
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
 navigator-updater==0.2.1
-nbclassic==0.3.7
-nbclient==0.6.3
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-networkx==2.8.2
-nltk==3.7
+nbclassic==0.2.6
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+networkx==2.5
+nltk==3.6.1
 nodejs==0.1.1
 nose==1.3.7
-notebook==6.4.11
-numba==0.55.2
-numexpr==2.8.1
-numpy==1.22.4
-numpydoc==1.3.1
+notebook==6.3.0
+numba==0.53.1
+numexpr==2.7.3
+numpy==1.20.1
+numpydoc==1.1.0
 olefile==0.46
-opencv-python==4.5.5.64
-openpyxl==3.0.10
-optional-django==0.3.0
-packaging==21.3
-pandas==1.4.2
-pandocfilters==1.5.0
-paramiko==2.11.0
-parso==0.8.3
+opencv-python==4.5.5.62
+openpyxl==3.0.7
+optional-django==0.1.0
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.3
+paramiko==2.7.2
+parso==0.7.0
 partd==1.2.0
-path==16.4.0
-pathlib2==2.3.7
-pathspec==0.9.0
-patsy==0.5.2
+path==15.1.2
+pathlib2==2.3.5
+pathspec==0.7.0
+patsy==0.5.1
 pep8==1.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.1.1
-pip==22.1.1
-pkginfo==1.8.2
-platformdirs==2.5.2
-pluggy==1.0.0
+Pillow==8.2.0
+pip==21.0.1
+pkginfo==1.7.0
+platformdirs==2.5.0
+pluggy==0.13.1
 ply==3.11
-prometheus-client==0.14.1
-prompt-toolkit==3.0.29
-psutil==5.9.1
+prometheus-client==0.10.1
+prompt-toolkit==3.0.17
+psutil==5.8.0
 ptyprocess==0.7.0
-py==1.11.0
-pycodestyle==2.8.0
+py==1.10.0
+pycodestyle==2.6.0
 pycosat==0.6.3
-pycparser==2.21
+pycparser==2.20
 pycurl==7.43.0.6
-pydocstyle==6.1.1
-pyerfa==2.0.0.1
-pyflakes==2.4.0
-Pygments==2.12.0
-PyJWT==2.4.0
-pylint==2.13.9
-pyls-black==0.4.7
-pyls-spyder==0.4.0
-PyNaCl==1.5.0
+pydocstyle==6.0.0
+pyerfa==1.7.3
+pyflakes==2.2.0
+Pygments==2.8.1
+PyJWT==2.1.0
+pylint==2.7.4
+pyls-black==0.4.6
+pyls-spyder==0.3.2
+PyNaCl==1.4.0
 pyodbc==4.0.0-unsupported
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
 pyreadline==2.1
-pyrsistent==0.18.1
+pyrsistent==0.17.3
 PySocks==1.7.1
-pytest==7.1.2
-python-dateutil==2.8.2
+pytest==6.2.3
+python-dateutil==2.8.1
 python-jsonrpc-server==0.4.0
 python-language-server==0.36.2
-pytz==2022.1
-PyWavelets==1.3.0
-pywin32==304
+pytz==2020.1
+PyWavelets==1.1.1
+pywin32==227
 pywin32-ctypes==0.2.0
-pywinpty==2.0.5
-PyYAML==6.0
-pyzmq==23.0.0
-QDarkStyle==3.0.3
-QtAwesome==1.1.1
-qtconsole==5.3.0
-QtPy==2.1.0
-regex==2022.4.24
-requests==2.27.1
-rope==1.1.1
-Rtree==1.0.0
+pywinpty==0.5.7
+PyYAML==5.4.1
+pyzmq==20.0.0
+QDarkStyle==2.8.1
+QtAwesome==1.0.2
+qtconsole==5.0.3
+QtPy==1.9.0
+regex==2021.4.4
+requests==2.25.1
+rope==0.18.0
+Rtree==0.9.7
 ruamel-yaml-conda==0.15.100
-scikit-image==0.19.2
-scikit-learn==1.1.1
-scipy==1.8.1
-seaborn==0.11.2
-Send2Trash==1.8.0
+scikit-image==0.18.1
+scikit-learn==0.24.1
+scipy==1.6.2
+seaborn==0.11.1
+Send2Trash==1.5.0
 setuptools==52.0.0.post20210125
 simplegeneric==0.8.1
-singledispatch==3.7.0
-sip==6.6.1
-six==1.16.0
+singledispatch==0.0.0
+sip==4.19.13
+six==1.15.0
 sniffio==1.2.0
-snowballstemmer==2.2.0
+snowballstemmer==2.1.0
 sortedcollections==2.1.0
-sortedcontainers==2.4.0
-soupsieve==2.3.2
-Sphinx==4.5.0
+sortedcontainers==2.3.0
+soupsieve==2.2.1
+Sphinx==4.0.1
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-serializinghtml==1.1.4
 sphinxcontrib-websupport==1.2.4
 spyder==4.2.5
 spyder-kernels==1.10.2
